--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 .container {
     display: flex;
-    max-width: 900px;
+    max-width: 1200px;
     width: 100%;
     background: #ffffff;
     border-radius: 10px;
@@ -24,12 +24,25 @@
 	width: 50%;
 }
 
+.toc {
+	padding-top: 15px;
+	padding-bottom: 15px;
+}
+
 .toc ul {
 	display: flex;
 	gap: 25px;
 	list-style: none;
 }
 
+.section-title {
+	padding-bottom: 10px;
+	font-size: xx-large;
+}
+
+.bio {
+	padding-top: 10px;
+}
 
 .circular-photo {
   width: 150px; /* Adjust the size as needed */
@@ -38,13 +51,24 @@
   overflow: hidden; /* Ensures content inside fits the circle */
   object-fit: cover; /* Ensures the image fits properly */
   border: 2px solid #ccc; /* Optional: Adds a border around the circle */
-
 }
 
 .circular-photo img {
   width: 100%;
   height: 100%;
   object-fit: cover; /* Keeps the image aspect ratio */
+}
+
+.projects {
+	list-style: none;
+}
+
+.projects li {
+	padding-bottom: 40px;
+}
+
+.project-name {
+	font-size: x-large;
 }
 
 .project-link img, svg {
@@ -54,6 +78,10 @@
 .project-link {
 	text-decoration: none;
 	color: black;
+}
+
+.links {
+	list-style: none;
 }
 
 .inconsolata-light {
